--- a/userscript/package.json
+++ b/userscript/package.json
@@ -9,6 +9,7 @@
   "author": "Meow",
   "license": "ISC",
   "dependencies": {
-    "esbuild": "^0.14.49"
+    "esbuild": "^0.14.49",
+    "socket.io-client": "^4.5.1"
   }
 }
