--- a/userscript/tsconfig.json
+++ b/userscript/tsconfig.json
@@ -2,9 +2,8 @@
   "compilerOptions": {
     "target": "ESNext",
     "module": "CommonJS",
-    "rootDir": "src",
     "esModuleInterop": true,
     "skipLibCheck": true
   },
-  "include": ["src"]
+  "include": ["src", "version.json"]
 }
