--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
     "@types/express": "^4.17.13",
     "@types/node": "^18.6.5",
     "axios": "^0.27.2",
+    "canvas": "^2.10.1",
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "socket.io": "^4.5.1",
