--- a/texture-packer/config.json
+++ b/texture-packer/config.json
@@ -3,12 +3,5 @@
   "///": "You may need to change assets to assets-dev and vice-versa.",
   "verbose": true,
   "replace": false,
-  "textures": {
-    "png": "https://ninja.io/assets-dev/combined/combined.png",
-    "json": "https://ninja.io/assets-dev/combined/combined.json"
-  },
-  "terrain": {
-    "png": "https://ninja.io/assets-dev/seamless/seamless.png",
-    "json": "https://ninja.io/assets-dev/seamless/seamless.json"
-  }
+  "meta": "https://nutils.itsmeow.cat/pack_meta"
 }
