--- a/userscript/package.json
+++ b/userscript/package.json
@@ -9,7 +9,9 @@
   "author": "Meow",
   "license": "ISC",
   "dependencies": {
+    "@types/vec2": "^1.6.1",
     "esbuild": "^0.14.49",
-    "socket.io-client": "^4.5.1"
+    "socket.io-client": "^4.5.1",
+    "vec2": "^1.6.1"
   }
 }
