--- a/backend/package.json
+++ b/backend/package.json
@@ -8,8 +8,10 @@
     "start": "tsc -b tsconfig.json && node ."
   },
   "dependencies": {
+    "@types/adm-zip": "^0.5.0",
     "@types/express": "^4.17.13",
     "@types/node": "^18.6.5",
+    "adm-zip": "^0.5.9",
     "axios": "^0.27.2",
     "canvas": "^2.10.1",
     "cors": "^2.8.5",
