--- a/userscript/package.json
+++ b/userscript/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@types/vec2": "^1.6.1",
     "esbuild": "^0.14.49",
+    "localforage": "^1.10.0",
     "socket.io-client": "^4.5.1",
     "vec2": "^1.6.1"
   }
