--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@types/adm-zip": "^0.5.0",
     "@types/express": "^4.17.13",
+    "@types/multer": "^1.4.7",
     "@types/node": "^18.6.5",
     "adm-zip": "^0.5.9",
     "axios": "^0.27.2",
@@ -17,6 +18,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "ffmpeg.js": "^4.2.9003",
+    "multer": "^1.4.5-lts.1",
     "socket.io": "^4.5.1",
     "typescript": "^4.7.4"
   },
