--- a/lib/package.json
+++ b/lib/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/itzTheMeow/NinjaIOUtils#readme",
   "dependencies": {
+    "@types/howler": "^2.2.7",
+    "howler": "^2.2.3",
     "pixi.js": "^7.0.5",
     "typescript": "^4.9.4"
   }
