--- a/userscript/package.json
+++ b/userscript/package.json
@@ -4,14 +4,17 @@
   "description": "The userscript for NinjaIOUtils.",
   "main": "build.mjs",
   "scripts": {
-    "start": "node ."
+    "start": "node .",
+    "dev": "node . --dev"
   },
   "author": "Meow",
   "license": "ISC",
   "dependencies": {
+    "@types/howler": "^2.2.7",
     "@types/vec2": "^1.6.1",
     "esbuild": "^0.14.49",
     "localforage": "^1.10.0",
+    "pixi.js": "^7.0.5",
     "socket.io-client": "^4.5.1",
     "vec2": "^1.6.1"
   }
