--- a/backend/package.json
+++ b/backend/package.json
@@ -2,10 +2,10 @@
   "name": "backend",
   "description": "The server that handles NinjaIOUtils data storage.",
   "version": "1.0.0",
-  "main": "dist/backend/src/server.js",
+  "main": "src/server.ts",
   "author": "Meow",
   "scripts": {
-    "start": "tsc -b tsconfig.json && node ."
+    "start": "tsx src/server.ts"
   },
   "dependencies": {
     "@types/adm-zip": "^0.5.0",
@@ -20,7 +20,14 @@
     "ffmpeg.js": "^4.2.9003",
     "multer": "^1.4.5-lts.1",
     "socket.io": "^4.5.1",
+    "tsx": "^4.19.3",
     "typescript": "^4.7.4"
   },
-  "license": "ISC"
+  "license": "ISC",
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "canvas",
+      "esbuild"
+    ]
+  }
 }
